syntax = "proto3";
package chat;

option go_package = "/mutex";

service Mutex {
  rpc RequestAccess(Request) returns (Empty);
  rpc RequestLamportTimestamp(Request) returns (LamportTimestamp);
  rpc RequestPeerList(Request) returns (PeerList);
  rpc LetPeerKnowIExist(Request) returns (Empty);
}

message Request {
  string clientId = 1;
  int32 timestamp = 2;
}

message Empty {}

message LamportTimestamp {
  int32 timestamp = 1;
}
message PeerList {
  repeated string peerList = 1;
}