syntax = "proto3";
package chat;

option go_package = "/auction";

service serverNode {
  rpc RequestAccess(AccessRequest) returns (Empty);
  rpc ShareNewHighestBid(NewHighestBid) returns (Empty);

  rpc Bid(bidMessage) returns (ack);
  rpc Result(Empty) returns (outcome);
}


message AccessRequest {
  string serverNodeId = 1;
  int32 bidTimestamp = 2;
}

message NewHighestBid {
  int32 amount = 2;
  string name = 3;
  int32 timestamp = 4;
}
message outcome {
  bool ongoing = 1;
  int32 amount = 2;
  string name = 3;
}

message bidMessage {
  int32 amount = 1;
  string name = 2;
}

message ack {
  string outcome = 1;
}

message Empty {}